--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run fetch",
+    "fetch": "node --loader ts-node/esm ./src/fetch-data.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -26,7 +27,8 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2",
     "vite": "^5.0.2"
   }
 }
